--- a/Dhruv.html
+++ b/Dhruv.html
@@ -177,7 +177,7 @@ Section: ZEE
                                 <option label="Barrie" value="Barrie"></option>
                                 <option label="Calgary" value="Calgary"></option>
                                 <option label="Charlottetown" value="Charlottetown"></option>
-                                <option label="Chibougamau" value="Chibougamu"></option>
+                                <option label="Chibougamau" value="Chibougamau"></option>
                                 <option label="Chilliwack" value="Chilliwack"></option>
                                 <option label="Cold Lake" value="Cold Lake"></option>
                                 <option label="Dorval" value="Doral"></option>
